@@ -13,30 +13,17 @@ import java.util.stream.Collectors;
 public enum Role {
 
     USER(Collections.emptySet()),
-    ADMIN(
-            Set.of(
-                    Permission.ADMIN_READ,
-                    Permission.ADMIN_UPDATE,
-                    Permission.ADMIN_DELETE,
-                    Permission.ADMIN_CREATE,
-                    Permission.MANAGER_READ,
-                    Permission.MANAGER_UPDATE,
-                    Permission.MANAGER_DELETE,
-                    Permission.MANAGER_CREATE
-            )
-    ),
-    MANAGER(
-            Set.of(
-                    Permission.MANAGER_READ,
-                    Permission.MANAGER_UPDATE,
-                    Permission.MANAGER_DELETE,
-                    Permission.MANAGER_CREATE
-            )
-    );
+    NEED_TO_VALIDATE(Collections.emptySet());
 
     @Getter
     private final Set<Permission> permissions;
 
+    public String getAuthority(){
+        return "ROLE_"+this;
+    }
+    public String getScopte(){
+        return "SCOPE_ROLE_"+this;
+    }
     public List<SimpleGrantedAuthority> getAuthorities() {
         var authorities = getPermissions()
                 .stream()
